--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./src/bin/www"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.37.3",
     "compression": "^1.7.4",
