--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "jest": "^29.6.2",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
