Pequeño fix para la funcionalidad de correo
- Reformulado ligeramente el código que se encarga de enviar y recibir correos

- Borrada una propiedad que no se estaba declarando en el controlador de usuarios, para el correo se está utilizando ahora el mail que se obtiene del body

- Agregadas las variables de entorno adecuadas

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ SECRET: 'SecretoDePrueba12345'
 CLOUDINARY_CLOUD_NAME: 'dhdm4ter5'
 CLOUDINARY_API_KEY: '718769513453194'
 CLOUDINARY_API_SECRET: 'uOCWYyEVh9oLEPAXTp0r9lH4TkI'
+EMAIL: 'SerenitySpaNoReply@gmail.com'
+PASSWORD: 'cafwhdgbcvbhqmux'
